[metadata]
name = pyarcrest
version = 0.1
author = aCT team
author_email = act-dev@cern.ch
description = Library for ARC CE REST
license = Apache 2.0

[options]
packages = find:
package_dir = =src
python_requires = >= 3.6
install_requires =
    cryptography < 37.0.0

[options.packages.find]
where=src
